# dojo-learn

./: Cargo.toml  todo.md
checkers-dojo/: dojo_dev.toml  learn.md  manifest_dev.json
checkers-dojo/src/systems/: actions.cairo
command/: command.md  readme.md  sequence.md
contract-folder/checkers-dojo/: dojo_dev.toml
contract-folder/checkers-dojo/src/: models.cairo
contract-folder/container-example/: dojo_dev.toml  manifest_dev.json
contract-folder/container-example/src/: models.cairo
contract-folder/dojo-starter/: .env.sepolia  dojo_sepolia.toml  sepolia.sh
contract-folder/player-example/src/: models.cairo
contract_learn_1/: Scarb.toml
contract_learn_1/src/: lib.cairo
controller/: Cargo.toml
controller/src/: main.rs
controller/src/controller_test/: deploy_controller_test.rs  mod.rs
deploy-sepolia/: Cargo.toml  contract_call.md  question.md  readme.md
deploy-sepolia/src/: byte_array.rs  event_contract.rs  main.rs  model_contract.rs  my_contract.rs  startknet_contract.rs  util.rs  word_contract.rs
deploy-sepolia/src/account_2/: account_1_contract_call.rs  account_2_permission.rs  account_2_register.rs  mod.rs
deploy-sepolia/src/call/: mod.rs
deploy-sepolia/src/checkers/: contract_call.rs  mod.rs
dojo-starter/: Scarb.toml  dojo_dev.toml  dojo_release.toml  manifest_sepolia.json
dojo-starter/src/systems/: actions.cairo
example-vite-react-sdk/client/: dojoConfig.ts  learn.md  package.json
example-vite-react-sdk/client_sepolia/: dojoConfig.ts  learn.md  package-lock.json  package.json  pnpm-lock.yaml
example-vite-react-sdk/client_sepolia/src/: App.tsx
example-vite-react-sdk/contract/: Scarb.toml  dojo_release.toml  manifest_sepolia.json
example-vite-react-sdk/example-vue-app-recs/: README.md  dojoConfig.ts  package.json  pnpm-lock.yaml
player-example/: manifest_dev.json
provider-test/: Cargo.toml
provider-test/src/: main.rs
(+5 files in other folders)
