[package]
name = "deploy-sepolia"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.133"
starknet = "0.12.0"
starknet-crypto = "0.7.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
cairo-starknet-2-6-2 = { package = "cairo-lang-starknet-classes", git = "https://github.com/starkware-libs/cairo", tag = "v2.6.2" }
cairo-starknet-2-5-4 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v2.5.4" }
cairo-starknet-2-7-1 = { package = "cairo-lang-starknet-classes", git = "https://github.com/starkware-libs/cairo", tag = "v2.7.1" }
url = "2.5.4"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.10", features = [ "abigen-rs" ] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.10" }