[package]
name = "provider-test"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet_api = "0.11.0"
starknet = "0.12.0"
starknet-crypto = "0.7.1"
starknet-types-core = { version = "0.1.7", features = [ "arbitrary", "hash" ] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
